--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6055,7 +6055,9 @@ These concepts could be captured in a categorical setting using \emph{inclusion 
 \begin{definition}  
  An \emph{inclusive category} \cite{DBLP:conf/birthday/GoguenR04} 
  is a category having a broad subcategory\footnote{That is, with the same objects as the original category.}
-which is a partially ordered class with finite products and coproducts, called intersection (denoted $\cap$) and union
+which is a partially ordered class with 
+a least element (denoted $\emptyset$),
+finite products and coproducts, called intersection (denoted $\cap$) and union
 (denoted $\cup$) such that for each pair of objects $A, B$, $A \cup B$ is a pushout of $A \cap B$ in the category.
 \qed \end{definition}
 
